# red-hat-ai-examples

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.MD
assets/usecase/knowledge-tuning/: Knowledge Tuning Workflow.excalidraw
examples/automl/: churn_prediction_tutorial.md  readme.md
examples/chat-bot/: README.md
examples/domain_customization_kfp_pipeline/: README.md  env.example  kfp_enhanced_summary_knowledge_tuning.py  knowledge_generation_pipeline.yaml
examples/fine-tuning/: README.md
examples/fine-tuning/lora/: README.md
examples/fine-tuning/osft/: README.md  osft-example.ipynb
examples/fine-tuning/training-hub/sft/: README.md  sft.ipynb
examples/knowledge-tuning/: .env.example  00_Setup.ipynb  README.md
examples/knowledge-tuning/00_Set_up/: 00_Set_up.ipynb  00_Set_up_README.md
examples/knowledge-tuning/00_Setup/: .env.example  00_Setup.ipynb  00_Setup_README.md
examples/knowledge-tuning/01_Base_Model_Evaluation/: 01_Base_Model_Evaluation_README.md  Base_Model_Evaluaion.ipynb  Base_Model_Evaluation.ipynb  README.md  pyproject.toml
examples/knowledge-tuning/01_Data_Preprocessing/: 01_Data_Processing_README.md  Data_Preprocessing.ipynb  New Data Preprocessing.ipynb  README.md  pyproject.toml
examples/knowledge-tuning/01_Data_Processing/: Data_Processing.ipynb  README.md  pyproject.toml
examples/knowledge-tuning/02_Data_Processing/: 02_Data_Processing_README.md  Data_Processing.ipynb  README.md  pyproject.toml
examples/knowledge-tuning/02_Knowledge_Generation/: .env.example  Knowledge Generation.ipynb  Knowledge_Generation.ipynb  README.md  pyproject.toml
examples/knowledge-tuning/03_Knowledge_Generation/: .env.example  03_Knowledge_Generation_README.md  Knowledge_Generation.ipynb  pyproject.toml
examples/knowledge-tuning/03_Knowledge_Mixing/: .env.example  Knowledge_Mixing.ipynb  README.md  knowledge_mixing.ipynb  pyproject.toml
examples/knowledge-tuning/03_Knowledge_Mixing/utils/: knowledge_utils.py
examples/knowledge-tuning/03_Model_Training/: Model_Training.ipynb  pyproject.toml
examples/knowledge-tuning/04_Knowledge_Mixing/: 04_Knowledge_Mixing_README.md  Knowledge_Mixing.ipynb  README.md  pyproject.toml
examples/knowledge-tuning/04_Model_Training/: .env.example  Model_Training.ipynb  README.md  osft_continual_learning.ipynb  pyproject.toml
examples/knowledge-tuning/05_Evaluation/: Evaluation.ipynb  README.md  pyproject.toml
examples/knowledge-tuning/05_Model_Training/: .env.example  05_Model_Training_README.md  Model_Training.ipynb  README.md  pyproject.toml
examples/knowledge-tuning/05_Model_Training/utils/: flash_attn_installer.py
examples/knowledge-tuning/06_Evaluation/: 06_Evaluation_README.md  Evaluation.ipynb  pyproject.toml
examples/knowledge-tuning/kfp/: README.md  pipeline.py  pyproject.toml
examples/knowledge-tuning/kfp/components/: document_processing.py  download_docling_models.py  ka.py  knowledge_generation.py  knowledge_mixing.py  model_training.py
examples/llmcompressor/: README.md  hello_world_pipeline.py  oneshot_pipeline.py  requirements.txt  workbench_example.ipynb
examples/ray/data/docling/: README.md  configure.py  ray-cluster-docling-batch-processing.ipynb  ray-job-docling-batch-processing.ipynb  (+1 more)
examples/trainer/kueue/: README.md  kueue-transformers-trainer-example.ipynb
scripts/: kfp_compile.py  kfp_script_v2.py  pyproject.toml
src/ai_tools/data_preprocessing/: preprocessing.py
(+3 files in other folders)
