[project]
name = "01-data-preprocessing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.53.0",
    "ai-tools @ file:///Users/scharan/projects/red-hat-ai-examples/dist/ai_tools-0.1.0-py3-none-any.whl",

]


[tool.uv.sources]
ai_tools = { workspace= true }