[project]
name = "02-knowledge-generation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sdg-hub>=0.3.0",
    "ai-tools @ file:///Users/scharan/projects/red-hat-ai-examples/dist/ai_tools-0.1.0-py3-none-any.whl",
    "datasets>=3.6.0",
]
