[project]
name = "03-knowledge-mixing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.2.0",
    "dotenv>=0.9.9",
    "pathlib>=1.0.1",
    "polars>=1.34.0",
    "tabulate>=0.9.0",
    "transformers>=4.57.1",
]
