[project]
name = "kfp-knowledge-tuning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kfp-kubernetes>=2.15.2",
    "kfp==2.15.2",
    "kfp-components @ git+https://github.com/red-hat-data-services/pipelines-components@main",
]
